@@ -92,6 +92,9 @@ if (is_array($xport_array["meta"])) {
 }
 
 header("Content-type: application/vnd.ms-excel");
+if (!empty($_SERVER['HTTPS']) && $_SERVER['HTTPS'] != 'off') {
+	header("Pragma: cache");
+}
 header("Cache-Control: max-age=15");
 header("Content-Disposition: attachment; filename=\"" . $filename . "\"");
 
